[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Menu Buttons/Square Buttons/Square Buttons/2.png" type="Texture2D" id=1]
[ext_resource path="res://Assets/Menu Buttons/Square Buttons/Square Buttons/1.png" type="Texture2D" id=2]
[ext_resource path="res://Assets/Menu Buttons/Large Buttons/Large Buttons/Menu Button.png" type="Texture2D" id=3]
[ext_resource path="res://Assets/Logo/png/carre_uniforme_couleur_logo.png" type="Texture2D" id=4]
[ext_resource path="res://Assets/Menu Buttons/Square Buttons/Square Buttons/3.png" type="Texture2D" id=5]
[ext_resource path="res://Scripts/LevelMenu.gd" type="Script" id=6]
[ext_resource path="res://Assets/Menu Buttons/Square Buttons/Square Buttons/4.png" type="Texture2D" id=7]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1012.0
offset_top = -1012.0
offset_right = 988.0
offset_bottom = 988.0
texture = ExtResource( 4 )

[node name="1" type="TextureButton" parent="."]
anchor_left = 0.472
anchor_top = 0.5
anchor_right = 0.472
anchor_bottom = 0.5
offset_left = -376.328
offset_top = -225.0
offset_right = -176.328
offset_bottom = -25.0
scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 2 )

[node name="2" type="TextureButton" parent="."]
anchor_left = 0.472
anchor_top = 0.5
anchor_right = 0.472
anchor_bottom = 0.5
offset_left = -227.328
offset_top = -225.0
offset_right = -27.328
offset_bottom = -25.0
scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 1 )

[node name="3" type="TextureButton" parent="."]
anchor_left = 0.472
anchor_top = 0.5
anchor_right = 0.472
anchor_bottom = 0.5
offset_left = -78.328
offset_top = -225.0
offset_right = 121.672
offset_bottom = -25.0
scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 5 )

[node name="Menu" type="TextureButton" parent="."]
anchor_left = 0.472
anchor_top = 0.5
anchor_right = 0.472
anchor_bottom = 0.5
offset_left = -191.328
offset_top = 280.0
offset_right = 408.672
offset_bottom = 480.0
scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 3 )

[node name="4" type="TextureButton" parent="."]
anchor_left = 0.472
anchor_top = 0.5
anchor_right = 0.472
anchor_bottom = 0.5
offset_left = 72.672
offset_top = -225.0
offset_right = 272.672
offset_bottom = -25.0
scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 7 )

[connection signal="pressed" from="1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="4" to="." method="_on_4_pressed"]
